# tecno-rev-backend

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 08c2098ca4f9_initial_migration_user_table.py  6404ead5fcfb_add_all_models_shipment_productimage_.py
app/: main.py  models.py
app/core/: config.py  database.py  mixins.py  permissions.py
app/modules/auth/: admin_routes.py  enums.py  models.py  router.py  schema.py  service.py
app/modules/catalog/: models.py  router.py  schema.py  service.py
app/modules/inventory/: enums.py  models.py  router.py  schema.py  service.py
app/modules/logistics/: enums.py  models.py  router.py  schema.py  service.py
app/modules/sales/: enums.py  models.py  router.py  schema.py  service.py
docs/: 01-installation.md  02-database-setup.md  03-architecture.md  04-models-relationships.md  05-migrations.md  06-auth-schemas.md  07-auth-services.md  08-auth-routes.md  09-auth-examples.md  10-crud-pattern.md  11-roles-setup.md  12-jwt-tokens.md  13-role-permissions.md  README.md
